# cognitio-core

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/cli/: run_headless.py
app/document/: __init__.py  navigator.py
app/domain/: annotation.py  document_ir.py  reading_goal.py  reading_run.py  research.py  signals.py  vlm_page_analysis.py
app/ingest/: __init__.py  base.py  factory.py  normalizer.py  parsed_document.py  router.py  source.py
app/prompts/: __init__.py  annotation_system.md  loader.py  planning_system.md  reading_system.md  research_system.md
app/protocol/: __init__.py  commands.py  events.py
app/runtime/: capability_probe.py  document_handles.py  node_handle.py  orchestrator.py  permissions.py  planner.py  session.py  tool_registry.py
app/sandbox/: __init__.py  compiler.py  handle.py  templates.py  workspace.py
app/services/: annotation_service.py  research_service.py
app/state/: __init__.py
docs/: backend_blueprint_v1.md  backend_blueprint_v2_vlm_first.md  execution_checklist_v1.md  implementation_master_plan_v1.md  ollama_integration_v1.md  pdf_ir_backend_v1.md  playwright_like_api_v1.md  repo_split_plan_v1.md  runtime_capability_probe_v1.md  sandbox_contract_v1.md
experiments/attention_transformer/: benchmark_first_page.py  debug_first_page.py  run_pdf_to_ir.py
experiments/docling_gguf/: README.md
tests/: test_annotation_locking.py  test_interventions.py  test_research.py  test_smoke.py
tests/adapters/: test_granite_docling.py
tests/cli/: test_run_headless.py
(+26 files in other folders)
